fix / space between inputs and submit button of auth forms on mobile landscape

--- a/src/features/Auth/Auth.css
+++ b/src/features/Auth/Auth.css
@@ -118,10 +118,16 @@ form {
     transition: all 0.3s ease;
 }
 
+
+@media (max-width: 1024px) {
+    .button-group {
+        margin-top: 1rem;
+    }
+}
+
 @media (orientation: portrait) {
     .button-group {
-        margin-top: 2rem;
+        margin-top: 3rem;
         place-self: center;
-        gap: 1.5rem;
     }
 }
